<resources>
    <string name="app_name">Custom List</string>
    <string name="show_count">Total number of count is </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_name">Custom Name :</string>
    <string name="a_good_name_makes_a_good_start">A Good Name Makes A Good Start</string>
    <string name="description">Description :</string>
    <string name="developing_time">Developing Time :</string>
    <string name="month_1">One month</string>
    <string name="month_2">Two months</string>
    <string name="month_3">Three months</string>
    <string name="month_4">Six months</string>
    <string name="month_5">One year</string>
    <string name="developed">  DEVELOPED</string>
    <string name="edit">Edit</string>
    <string name="string_developing">Developing</string>
</resources>
