<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:padding="@dimen/dp_16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/name_group"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/custom_name"
            style="@style/tx_et_title"/>
        <EditText
            android:hint="@string/a_good_name_makes_a_good_start"
            android:id="@+id/et_name"
            style="@style/et_style"/>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/name_group"
        android:id="@+id/des_group"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:paddingBottom="8dp"
            style="@style/tx_et_title"/>
        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:background="@android:drawable/edit_text">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/time_group"
        android:layout_below="@id/des_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/developing_time"
            style="@style/tx_et_title"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:id="@+id/sp_time"
            android:entries="@array/developing_time_values"
            />
    </LinearLayout>
    <RatingBar
        android:numStars="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rb_level"
        android:stepSize="1"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/time_group"
        android:layout_marginTop="@dimen/dp_48"/>
    <TextView
        android:id="@+id/tx_developed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/rb_level"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_48"
        android:drawableLeft="@drawable/hook"
        android:gravity="center"
        />
</RelativeLayout>